syntax = "proto3";
package kk_etcd;
option go_package = "/api_def";
import "kk_etcd_models/pb_user_kk_etcd.proto";

//get user
message GetUser {
  message Input {
    string UserName = 1;
  }

  message Output {
    kk_etcd.PBUser User = 1;
  }
}